# vut-mpg

./: .gitattributes  .gitignore  README.md
cvika/: cv1_zadani.cpp  cv2_zadani.cpp  cv3_zadani.cpp  cv4.cpp  cv9_ukol1_2_z.cpp  cv9_ukol3.cpp  cv9_ukol4_z.cpp  cv9_ukol5.cpp  imageLoad.h  out  simpleMesh.h  stdafx.cpp  stdafx.h  targetver.h  ukol1.cpp  ukol2.cpp
cvika/bodovane/: BezieruvPlat.cpp  deCasteljau.cpp  out  subdivision.cpp
cvika/eight/: normaly.cpp  osvetleni.cpp  out  prekryvani.cpp
cvika/nine/: cv9_ukol1_2_z.cpp  cv9_ukol3.cpp  cv9_ukol4_z.cpp  cv9_ukol5.cpp  out
cvika/ten/: imageLoad.h  out  ukol1.cpp  ukol2.cpp
cvika/ten/old_tyre_1k_blender/: old_tyre_1k.blend
proj-v2/: CMakeLists.txt  README.md
proj-v2/.cache/clangd/index/: bezier.cpp.92374D3A62D686F5.idx  bezier.h.C52C24BB3A177CCB.idx  colors.h.B75EFFF08D22C3AD.idx  cube.cpp.230EE7A70C74B3CD.idx  cube.h.F97432C45D268F37.idx  house.cpp.3D87CCEFD51D7DDD.idx  house.h.5B1638875A6E4D8E.idx  imageLoad.h.D2AE57BB6228353B.idx  input.cpp.23BAA1E337FE5FC0.idx  input.h.92028CFF1D3E982E.idx  main.cpp.BC5E94310C19B2E9.idx  obj_loader.h.53745FF464E30088.idx  plane.cpp.146A92D3FF917A34.idx  plane.h.550683FE462042A2.idx  projectile.cpp.3C773D7BEA414C65.idx  projectile.h.E136C2A8C8A03270.idx  river.cpp.62932947FE24199F.idx  river.h.CBF1290852E55D15.idx  state.cpp.D8DBBCFD720F2614.idx  state.h.943028639B5084FB.idx  sun.cpp.17C1255B001C594D.idx  sun.h.B763058B9960FDAB.idx
proj-v2/assets/: Untitled.mtl
proj-v2/build-windows-x64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
proj-v2/cmake/: WIN-mingw.cmake
proj-v2/src/: cube.cpp  house.cpp  input.cpp  main.cpp  plane.cpp  projectile.cpp  river.cpp  state.cpp  sun.cpp
projekt/: CMakeLists.txt  README.md  draw.cpp  draw.h  input.cpp  input.h  main.cpp
projekt/include/hdr/: bezier.h
projekt/include/src/: bezier.cpp  draw.cpp  input.cpp
